crates/app/tests/snapshots/subagent_prompt_golden__codeblock.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: rendered
---
```rust
fn main() {}
```
