crates/app/tests/snapshots/subagent_prompt_golden__compaction_summary_handoff.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: "render_compaction_summary(\"Handoff state.\\n\\nOwned files listed.\",\nSome(\"handoff\"))"
---
Context replaced. The <handoff> below is a handoff document a prior instance of you wrote from the full conversation. It is your own working memory, not user input.
- First person inside it refers to you (the prior instance).
- "Next Steps" is your own resumed plan; re-check it against the latest user message before acting.
- The handoff already exists and is complete: NEVER write another handoff document unless the user explicitly asks.
MUST build on prior work; NEVER duplicate prior work.

<handoff>
Handoff state.

Owned files listed.
</handoff>
