crates/app/tests/snapshots/subagent_prompt_golden__compaction_summary_ordinary.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: "render_compaction_summary(\"Portable state.\\n\\nNext action.\", Some(\"remote\"))"
---
Prior model work/tool state available.
MUST build on prior work; NEVER duplicate prior work.

<summary>
Portable state.

Next action.
</summary>
