crates/app/tests/snapshots/subagent_prompt_golden__driver_schema_helpers.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: rendered
---
type ResultData = { answer: string };
---
type ResultData = { answer: string };
type YieldEnvelope =
  | { result: { data: ResultData } }
  | { result: { error: string } };
