crates/app/tests/snapshots/subagent_prompt_golden__empty_stop_retry.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: empty_stop
---
<system-injection>
Stopped without actionable output; task incomplete. Continue with a user-visible final answer or the next required tool call.
Attempt #2/5
</system-injection>
