crates/app/tests/snapshots/subagent_prompt_golden__join.snap
---
source: crates/app/tests/subagent_prompt_golden.rs
expression: rendered
---
one,two words,three
